kustomize/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spms-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: spms-test.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-test
            port:
              number: 3000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-test
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-test
            port:
              number: 8000
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-test
            port:
              number: 8000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: spms-clusterip-test
            port:
              number: 8000
