kustomize/overlays/test/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: spms-clusterip
spec:
  type: ClusterIP
  selector:
    app: spms-test
    variant: test
